[package]
name = "drawbridge"
version = "0.1.0"
authors = ["Profian Inc"]
edition = "2021"

[workspace]
members = [
    "crates/tree",
    "crates/byte",
    "crates/jose",
    "crates/type",
]

[dependencies]
# Internal dependencies
#drawbridge-name = { path = "./crates/name" }

# External dependencies
async-h1 = "2.3.3"
async-std = "1.11.0"

[patch.crates-io]
http = { git = "https://github.com/npmccallum/http", rev = "0f4438e7f5107d8b06142894d2d9cd5186b721ab" }
